2010-10-18  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #15991: Style error messages in the TYPO3 way (Thanks to Lars Zimmermann, T3UXW09)

2010-10-18  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #1318: 'removeTag' does not remove closing tags

2010-10-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15657: IRRE: Foreign selector with groupdb won't add new items (Thanks to Thomas Maroschik)
	* Added feature #16037: htmlArea RTE: Bring custom events under HTMLArea namespace

2010-10-17  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16030: Page tree root node lacks white-space: nowrap

2010-10-17  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #16018: Remove CSH icons from Core and replace by new CSH API
	* Fixed bug #15830: Sprite - IRRE record synchronization icon missing (Thanks to Stefan Galinski)
	* Follow-up to #15663: SpriteGenerator adds empty folder to spritebase, which results in wrong css (Thanks to Steffen Ritter)
	* Fixed bug #16023: Deprecate unused / old files in typo3/ that belong to the old, removed backend

2010-10-17  Ernesto Baschny  <ernst@cron-it.de>

	* Added feature #15998: Create a new API to send mails based on SwiftMailer to replace t3lib_htmlmail

2010-10-17  Benjamin Mack  <benni@typo3.org>

	* Added feature #16018: Remove CSH icons from Core and replace by new CSH API
	* Followup to #16006: Remove the checkbox that clears the input fields in TCE-forms and replace it with a sprite icon - fix for flexforms (Thanks to Jo Hasenau)
	* Added feature #15844: Use HTML5 as the default TYPO3 Backend doktype
	* Added feature #16026: Added hook / Cannot hook into the marker replacement functionality for BE templates
	* Fixed bug #16020: Streamline usage of template.php:dynTabMenu
	* Fixed bug #16022: Size calculation function can only deal with integers
	* Fixed bug #16006: Remove the checkbox that clears the input fields in TCE-forms and replace it with a sprite icon (Thanks to Jo Hasenau)
