@@ -1,3 +1,7 @@
+2010-10-18  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Added feature #16047: htmlArea RTE: Add word count in the status bar
+
 2010-10-17  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Added feature #16037: htmlArea RTE: Bring custom events under HTMLArea namespace
